# python-fastapi-template

./: .dockerignore  .env.example  .pre-commit-config.yaml  LICENSE  Makefile  README.md  config.py  docker-compose.yml  main.py  pyproject.toml
core/: registry.py  utils.py
core/api/: __init__.py
core/api/auth/: __init__.py  handlers.py
core/api/ping/: __init__.py  handlers.py
core/api/profile/: __init__.py  handlers.py
core/models/auth/: requests.py  responses.py
core/models/profile/: db.py  domains.py  enums.py  requests.py  responses.py
core/services/auth/: services.py
core/services/profile/: helpers.py  services.py
core/storage/: ping_storage.py  profile_storage.py
core/storage/db/: postgres.py  schema.sql
core/tasks/: task_list.py
tasks/: celery_app.py
tests/: conftest.py
tests/utils/: request.py
